--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.15.2",
     "botkit": "^0.4.10",
     "botkit-middleware-witai": "0.0.2",
+    "botkit-witai": "^1.0.8",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
