--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-fetch": "^1.6.3",
     "node-rest-client": "^2.5.0",
     "node-wit": "^4.2.0",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
   }
 }
