Added code required for beepboop integration

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@slack/client": "^3.8.1",
     "body-parser": "~1.15.2",
     "botkit": "^0.4.10",
+    "botkit-storage-beepboop": "^1.0.0",
     "botkit-middleware-witai": "0.0.2",
     "botkit-witai": "^1.0.8",
     "cookie-parser": "~1.4.3",
